--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <header>HomeFlix</header>
+    <h1>Uma nova História vem aí.....</h1>
+    <p>#FilmesdeAção</p>
 </body>
 </html>
